--- a/scss/partials/_colors.scss
+++ b/scss/partials/_colors.scss
@@ -9,5 +9,5 @@ $yellow: #FFCC01;
 $darkBlue: #1F373D;
 
 // Neutral
-$Light-gray: hsl(0, 0%, 81%);
-$Light-grayish-blue: hsl(210, 46%, 95%);
+$Light-gray: #919EB1;
+$Light-grayish-blue: #F6F5F4;
