--- a/scss/partials/_fonts.scss
+++ b/scss/partials/_fonts.scss
@@ -1,5 +1,8 @@
 // desc: 'Contain all website Fonts'
 
+//Fonts Family
+$montserrat-font: 'Montserrat', sans-serif;
+
 // Fonts Weight
 $font-weight-100: 100;
 $font-weight-300: 300;
