--- a/scss/partials/_utilities.scss
+++ b/scss/partials/_utilities.scss
@@ -16,6 +16,8 @@
 html,
 body {
     height: 100%;
+    font-family: $montserrat-font;
+    font-size: $main-font-size;
 }
 
 html {
@@ -55,4 +57,24 @@ a {
         color: inherit;
         text-decoration: none;
     }
+}
+
+//All images
+img {
+    max-width: 100%;
+    height: auto;
+}
+
+
+// Help Classes
+.flex-center {
+    display: flex !important;
+    align-items: center;
+    justify-content: center;
+}
+
+//All Paragraphs
+.paragraph {
+    line-height: 1.8;
+    letter-spacing: 0.025em;
 }
