--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,6 +6,7 @@ Written by: 	Ahmed Osama Bedawy - (https://github.com/ahmeddoosama)
 // Import Partials
 @import "./partials/utilities";
 @import "./partials/sections";
+@import "./partials/forms";
 
 // Import Components
 @import "./components/buttons";
