--- a/scss/partials/_colors.scss
+++ b/scss/partials/_colors.scss
@@ -7,6 +7,7 @@ $white: #FFF;
 // Primary
 $yellow: #FFCC01;
 $darkBlue: #1F373D;
+$hover-yellow: rgb(255, 222, 89);
 
 // Neutral
 $Light-gray: #919EB1;
