--- a/scss/partials/_sections.scss
+++ b/scss/partials/_sections.scss
@@ -41,3 +41,55 @@ section {
         }
     }
 }
+
+//Appartments Section
+.appartments {
+    background-color: $Light-grayish-blue;
+    .appartment-card {
+        margin-bottom: 30px;
+        box-shadow: 0px 2px 8px 0px rgb(24 49 56 / 15%);
+        .appartment-body {
+            background-color: $white;
+            padding: 25px 20px;
+            .appartment-title {
+                font-size: 15px;
+                font-weight: $font-weight-700;
+                color: $darkBlue;
+                letter-spacing: 0;
+                line-height: 20px;
+            }
+            .appartment-details {
+                display: flex;
+                justify-content: space-between;
+                padding-top: 10px;
+                p {
+                    margin-bottom: 0;
+                }
+
+                .price {
+                    p {
+                        color: $yellow;
+                        font-size: 18px;
+                        font-weight: $font-weight-700;
+                    }
+                }
+
+                .appartment-feature {
+                    img {
+                        margin-right: 5px;
+                        margin-left: 15px;
+                    }
+                }
+            }
+        }
+    }
+    .section-footer {
+        display: flex;
+    }
+    @media only screen and (max-width: 767px) {
+        .section-footer {
+            text-align: $text-align-center;
+            display: block;
+        }
+    }
+}
