--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,14 @@ img {
 .paragraph {
   line-height: 1.8;
   letter-spacing: 0.025em;
+  font-size: 13px;
+  margin-bottom: 15px;
+}
+
+.small-title {
+  font-weight: 700;
+  font-size: 25px;
+  color: #1F373D;
 }
 
 /* ========== Contain Sections style ========== */
@@ -202,6 +210,25 @@ section .section-content {
 }
 .works .work-boxs .work-box:hover {
   background-color: #FFCC01;
+}
+
+.service .service-img {
+  background: url(../images/others/services.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  left: -105px;
+  height: 630px;
+}
+.service .service-info .paragraph {
+  padding: 15px 0px 50px 0px;
+}
+@media only screen and (max-width: 991px) {
+  .service .service-img {
+    left: 0;
+    margin-bottom: 20px;
+  }
 }
 
 /* ========== Contain Sections style ========== */
