--- a/scss/partials/_sections.scss
+++ b/scss/partials/_sections.scss
@@ -46,22 +46,8 @@ section {
 .appartments {
     background-color: $Light-grayish-blue;
     .appartment-card {
-        margin-bottom: 30px;
-        box-shadow: 0px 2px 8px 0px rgb(24 49 56 / 15%);
         .appartment-body {
-            background-color: $white;
-            padding: 25px 20px;
-            .appartment-title {
-                font-size: 15px;
-                font-weight: $font-weight-700;
-                color: $darkBlue;
-                letter-spacing: 0;
-                line-height: 20px;
-            }
             .appartment-details {
-                display: flex;
-                justify-content: space-between;
-                padding-top: 10px;
                 p {
                     margin-bottom: 0;
                 }
@@ -106,10 +92,8 @@ section {
         margin-top: 50px;
         .work-box {
             overflow: hidden;
-            box-shadow: 0px 2px 8px 0px rgb(24 49 56 / 15%);
             color: $darkBlue;
             transition: all 0.3s ease-in-out;
-            margin-bottom: 20px;
             .work-box-number {
                 position: relative;
                 span {
@@ -150,7 +134,7 @@ section {
     }
 }
 
-//Service Section
+//Service  Section
 .service {
     .service-img {
         background: url(../images/others/services.png);
@@ -170,6 +154,22 @@ section {
         .service-img {
             left: 0;
             margin-bottom: 20px;
+        }
+    }
+}
+//agents section
+.agents {
+    .agent-box {
+        .box-details {
+            .name {
+                color: $yellow;
+                font-weight: $font-weight-700;
+            }
+            .social-links {
+                a:not(:last-child) {
+                    margin-right: 10px;
+                }
+            }
         }
     }
 }
