--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -45,3 +45,16 @@
         padding: 15px 20px;
     }
 }
+
+// btn-more
+.btn-more {
+    background-color: $darkBlue;
+    color: $white;
+    border-radius: 0;
+    padding: 20px 60px;
+    font-weight: $font-weight-700;
+    &:hover {
+        color: $white;
+        background-color: $yellow;
+    }
+}
