--- a/css/style.css
+++ b/css/style.css
@@ -284,7 +284,6 @@ section .section-content {
 /* ========== Forms ========== */
 form {
   display: flex;
-  width: 500px;
   box-shadow: 0px 10px 15px 0px rgba(29, 31, 36, 0.1);
 }
 form .input-search {
@@ -302,6 +301,18 @@ form .input-search {
   form {
     width: 300px;
   }
+}
+
+.subscribe-form .input-search {
+  background-image: unset;
+  border-radius: 0;
+}
+.subscribe-form .search-btn {
+  background-color: #F6F5F4;
+  border-radius: 0;
+}
+.subscribe-form .search-btn:hover {
+  background-color: #FFCC01;
 }
 
 /* ========== Contain Button style ========== */
@@ -524,5 +535,36 @@ header .wrapper .slide-down a p {
 /* Responsive */
 /* Public Colors */
 /* ========== Footer ========== */
+footer {
+  background-color: #1F373D;
+  padding: 65px 0;
+  color: #FFF;
+}
+footer .small-title {
+  color: #FFF;
+}
+footer .footer-top {
+  padding-bottom: 45px;
+  border-bottom: 1px solid #919EB1;
+}
+footer .footer-bottom {
+  padding-top: 60px;
+}
+footer .footer-bottom .footer-logo .small-title {
+  margin-bottom: 35px;
+}
+footer .footer-bottom .footer-column .footer-column-title {
+  color: #919EB1;
+  font-size: 14px;
+  font-weight: 400;
+  padding-bottom: 35px;
+}
+footer .footer-bottom .footer-column ul li {
+  font-size: 13px;
+  padding-bottom: 18px;
+}
+footer .footer-bottom .footer-column ul li a:hover {
+  color: #FFCC01;
+}
 
 /*# sourceMappingURL=style.css.map */
