--- a/scss/partials/_forms.scss
+++ b/scss/partials/_forms.scss
@@ -6,7 +6,6 @@
 /* ========== Forms ========== */
 form {
     display: flex;
-    width: 500px;
     box-shadow: 0px 10px 15px 0px rgb(29 31 36 / 10%);
 
     .input-search {
@@ -22,5 +21,21 @@ form {
     }
     @media only screen and (max-width: 767px) {
         width: 300px;
+    }
+}
+
+
+//subscribe-form
+.subscribe-form {
+    .input-search {
+        background-image: unset;
+        border-radius: 0;
+    }
+    .search-btn {
+        background-color: $Light-grayish-blue;
+        border-radius: 0;
+        &:hover {
+            background-color: $yellow;
+        }
     }
 }
