--- a/css/style.css
+++ b/css/style.css
@@ -511,6 +511,9 @@ header .wrapper .slide-down a p {
   font-weight: 500;
   font-size: 25px;
 }
+.navbar .navbar-brand:hover {
+  color: #FFCC01;
+}
 .navbar .navbar-nav {
   margin: auto;
 }
@@ -524,9 +527,13 @@ header .wrapper .slide-down a p {
   border: 0;
 }
 @media only screen and (max-width: 991px) {
+  .navbar .navbar-toggler:focus {
+    box-shadow: none;
+  }
   .navbar .navbar-collapse {
     text-align: center;
     font-size: 20px;
+    padding: 10px 0 20px 0;
   }
 }
 
