--- a/scss/layout/_navbar.scss
+++ b/scss/layout/_navbar.scss
@@ -12,6 +12,9 @@
     .navbar-brand {
         font-weight: $font-weight-500;
         font-size: 25px;
+        &:hover {
+            color: $yellow;
+        }
     }
 
     .navbar-nav {
@@ -35,9 +38,15 @@
     }
 
     @media only screen and (max-width: 991px) {
+        .navbar-toggler{
+            &:focus {
+                box-shadow: none;
+            }
+        }
         .navbar-collapse {
             text-align: center;
             font-size: 20px;
+            padding: 10px 0 20px 0;
         }
     }
 }
