improvement in about section

--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,7 @@ img {
 /* Public Colors */
 /* ========== Sections ========== */
 section {
-  padding-top: 140px;
+  padding-top: 100px;
   padding-bottom: 80px;
 }
 section .section-title {
@@ -98,7 +98,18 @@ section .section-content {
   font-size: 13px;
   color: #1F373D;
 }
+@media only screen and (max-width: 767px) {
+  section .section-title {
+    font-size: 28px;
+  }
+}
 
+.about {
+  padding-top: 140px;
+}
+.about .section-content {
+  margin-bottom: 20px;
+}
 .about .section-content .paragraph {
   margin-bottom: 15px;
 }
