--- a/scss/partials/_sections.scss
+++ b/scss/partials/_sections.scss
@@ -5,7 +5,7 @@
 /* ========== Sections ========== */
 section {
     padding-top: 100px;
-    padding-bottom: 80px;
+    padding-bottom: 60px;
     .section-title {
         font-size: 40px;
         font-weight: $font-weight-700;
@@ -157,7 +157,7 @@ section {
 //Service  Section
 .service {
     .service-img {
-        background: url(../images/others/services.png);
+        background: url(../images/background/10.jpg);
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
