--- a/css/style.css
+++ b/css/style.css
@@ -260,7 +260,6 @@ section .section-content {
   background-repeat: no-repeat;
   position: relative;
   margin-bottom: 80px;
-  background-image: url(../images/others/add.png);
 }
 .add .add-img .add-img-info {
   position: absolute;
@@ -278,11 +277,18 @@ section .section-content {
   font-weight: 700;
   color: #1F373D;
 }
+.add .add-img.img1 {
+  background-image: url(../images/apertments/11.jpg);
+}
 .add .add-img.img2 {
+  background-image: url(../images/apertments/12.jpg);
   float: right;
 }
 .add .add-img.img2 .add-img-info {
   left: 150px;
+}
+.add .add-img.img3 {
+  background-image: url(../images/apertments/13.jpg);
 }
 .add .add-info .paragraph {
   padding: 15px 0px 50px 0px;
