improvement in footer

--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,6 @@ Name: 			style.css
 Written by: 	Ahmed Osama Bedawy - (https://github.com/ahmeddoosama)
 */
 /* Public Colors */
-/* Responsive */
 /* Public Colors */
 /***
 *
@@ -82,7 +81,6 @@ img {
 
 /* ========== Contain Sections style ========== */
 /* Public Colors */
-/* Responsive */
 /* Public Colors */
 /* ========== Sections ========== */
 section {
@@ -318,7 +316,6 @@ section .section-content {
 
 /* ========== Contain Sections style ========== */
 /* Public Colors */
-/* Responsive */
 /* Public Colors */
 /* ========== Forms ========== */
 form {
@@ -351,7 +348,6 @@ form .input-search {
 
 /* ========== Contain Button style ========== */
 /* Public Colors */
-/* Responsive */
 /* Public Colors */
 /* ========== Button ========== */
 .getting-started-btn {
@@ -408,9 +404,7 @@ form .input-search {
 
 /* ========== Contain Cards style ========== */
 /* Public Colors */
-/* Responsive */
 /* Public Colors */
-/* Responsive */
 /* ========== Cards ========== */
 .box {
   box-shadow: 0px 2px 8px 0px rgba(24, 49, 56, 0.15);
@@ -435,7 +429,6 @@ form .input-search {
 
 /* ========== Contain Header style ========== */
 /* Public Colors */
-/* Responsive */
 /* Public Colors */
 /* ========== Header ========== */
 header .wrapper {
@@ -529,7 +522,6 @@ header .wrapper .slide-down a p {
 
 /* ========== Contain Navbar style ========== */
 /* Public Colors */
-/* Responsive */
 /* Public Colors */
 /* ========== Navbar ========== */
 .navbar {
@@ -570,7 +562,6 @@ header .wrapper .slide-down a p {
 
 /* ========== Contain Footer style ========== */
 /* Public Colors */
-/* Responsive */
 /* Public Colors */
 /* ========== Footer ========== */
 footer {
@@ -603,6 +594,19 @@ footer .footer-bottom .footer-column ul li {
 }
 footer .footer-bottom .footer-column ul li a:hover {
   color: #FFCC01;
+}
+@media only screen and (max-width: 767px) {
+  footer {
+    text-align: center;
+  }
+  footer form,
+footer .footer-logo,
+footer .footer-column {
+    margin-top: 25px;
+  }
+  footer .footer-bottom .footer-column .footer-column-title {
+    padding-bottom: 15px;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
